--- a/meu-curriculo-02/css/styles.css
+++ b/meu-curriculo-02/css/styles.css
@@ -3777,6 +3777,10 @@ textarea.form-control-lg {
 .navbar-brand:hover, .navbar-brand:focus {
   color: var(--bs-navbar-brand-hover-color);
 }
+.foto-perfil{
+  width: 50px;
+  height: 50px;
+}
 
 .navbar-nav {
   --bs-nav-link-padding-x: 0;
